STIMULUS WORKING EPIC STYLE

--- a/app/views/associations/edit.html.erb
+++ b/app/views/associations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container bg-white mt-3 p-4">
+<div data-controller="test" class="container bg-white mt-3 p-4">
   <h1>Edit details for <%= @association.card.suit_value %></h1>
   <%= simple_form_for @association do |f| %>
 
