--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -9,6 +9,7 @@
 
 .tab button.active {
   background-color: #ccc;
+  border-radius: 8px;
 }
 
 .tabcontent {
@@ -17,4 +18,5 @@
 
 .tabcontent.active {
   display: flex;
+  margin-right: 8px;
 }
