--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,14 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-
+<div class="banner">
+  <div class="container">
+    <h2 class="display-1">♣♥♠♦</h1>
+    <h1>Memorise a deck of cards</h1>
+    <p>
+      Assign each card a unique <strong>P</strong>erson, <strong>A</strong>ction & <strong>O</strong>bject.
+      <br>
+      Then, to remember the order of cards, you combine the Person from card 1
+      <br>
+      with the Action of card 2 plus the Object of card 3 all into 1 "story" of 3 cards.
+    </p>
+    <%= link_to "Create a PAO Deck", associations_path, class: "btn btn-secondary" %>
+  </div>
+</div>
