--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,4 +5,6 @@
 @import "navbar";
 @import "playing_card";
 @import "tabs";
-@import "banner"
+@import "banner";
+@import "suit_card";
+@import "card";
