--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,8 +1,8 @@
 .banner {
   background-size: cover;
   background-position: center;
-  padding: 150px 0;
-  background-color: #3c6e71;
+  padding: 120px 0;
+  background-color: $blue;
   text-align: center;
   h2 {
     color: white;
@@ -12,7 +12,7 @@
     margin: 0;
     color: white;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-    font-size: 32px;
+    font-size: 64px;
     font-weight: bold;
   }
   p {
