--- a/app/assets/stylesheets/components/_playing_card.scss
+++ b/app/assets/stylesheets/components/_playing_card.scss
@@ -1,7 +1,34 @@
 .playing-card {
   border-radius: 16px;
 
-  div {
-    height: 260px;
+}
+
+.card-inner {
+  position: relative;
+  width: 100%;
+  height: 330px;
+  transform-style: preserve-3d;
+  transition: transform 0.6s;
+}
+
+.card-inner.is-flipped {
+  transform: rotateY(180deg);
+}
+
+.card-front, .card-back {
+  position: absolute;
+  width: 100%;
+  backface-visibility: hidden;
+}
+
+.card-front {
+  z-index: 2;
+  transform: rotateY(0deg);
+}
+
+.card-back {
+  transform: rotateY(180deg);
+  .bot {
+    margin-top: 232px;
   }
 }
