--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,14 +17,14 @@
     </div>
   </div>
     <h1>Memorise a deck of cards</h1>
-    <p>
+    <p class="mt-2">
       Assign each card a unique <strong>P</strong>erson, <strong>A</strong>ction & <strong>O</strong>bject.
       <br>
       Then, to remember the order of cards, you combine the Person from card 1
       <br>
       with the Action of card 2 plus the Object of card 3 all into 1 "story" of 3 cards.
     </p>
-    <%= link_to "Create a PAO Deck", associations_path, class: "btn btn-info" %>
+    <%= link_to "Create a PAO Deck", associations_path, class: "btn btn-info mt-2 " %>
   </div>
 </div>
 <div class="container mt-3">
