--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,7 +36,7 @@
         <div class="card-body">
           <div class="card-title">
             <h1 class="text-secondary m-3">♣♥♠♦</h1>
-            <h4 class="text-primary header4">Learn Memorising Playing Cards</h4>
+            <h4 class="text-primary header4">Learn to Memorise Playing Cards</h4>
           </div>
           <p>Start assigning each card a Person Action and Object so you can start memorising cards</p>
         </div>
@@ -45,7 +45,7 @@
     </div>
 
     <div class="mt-3 col-lg-6 col-sm-12 mb-4">
-      <%= link_to associations_path, class: "card-link" do %>
+      <%= link_to cards_path, class: "card-link" do %>
       <div class="card bg-white link-border text-center pt-3 pb-3">
         <div class="card-body">
           <div class="card-title">
@@ -64,7 +64,7 @@
         <div class="card-body">
           <div class="card-title">
             <h1 class="text-secondary m-3">9128327</h1>
-            <h4 class="text-primary header4">Learn Memorising Numbers</h4>
+            <h4 class="text-primary header4">Learn to Memorise Numbers</h4>
           </div>
           <p>Start assigning each card a Person Action and Object so you can start memorising cards</p>
         </div>
